--- a/public/locale/el.json
+++ b/public/locale/el.json
@@ -1,12 +1,17 @@
 {
 	"app.title": "",
-	"app.subtitle": "Η εξάπλωση της νόσου στην Ελλάδα και στον κόσμο",
+	"app.subtitle": "Η εξάπλωση της νόσου στην Ελλάδα.",
 	"view.greece": "Ελλάδα",
 	"view.global": "Κόσμος",
 	"link.about": "Η Εφαρμογή & τα Δεδομένα",
 	"lastupdate": "Tελευταία ενημέρωση",
+	"week" : "Εβδομάδα",
+	"increase": "αύξηση",
+	"in_the_average":"στη μέση συγκέντρωση ιικού φορτίου του SARS-CoV-2 στα αστικά λύματα ανά 100.000 κατοίκους.",
 	"cases": "κρούσματα | κρούσμα",
-	"deaths": "θάνατοι | θάνοτος",
+	"deaths": "θάνατοι | θάνατος",
+	"vaccinations": "εμβολιασμοί | εμβολιασμός",
+	"admissions" : "εισαγωγές",
 	"total": "total",
 	"active": "active",
 	"intubated": "intubated",
@@ -16,12 +21,481 @@
 	"occupied": "occupied",
 	"total cases": "σύνολο κρουσμάτων",
 	"total deaths": "σύνολο θανάτων",
+	"total admissions": "σύνολο εισαγωγών",
+	"avg intubated": "μ.ο. διασωληνωμένων",
+	"overall avg intubated": "γενικός μ.ο. διασωληνωμένων",
+	"total vaccinations": "σύνολο εμβολιασμών",
 	"note.widget.hospitals": "note.widget.hospitals",
-	"button.in.greece": "Αναλύσεις για την Ελλάδα",
+	"button.in.greece": "Αναλύσεις",
 	"button.in.world": "Αναλύσεις για τον Κόσμο",
 	"label.period": "χρονική περίοδος",
 	"embed.body": "Με τον παρακάνω κώδικα μπορείτε να ενσωματώσετε τον χάρτη ή το γράφημα που επιθυμείτε στην ιστοσελίδα σας. Εάν παρατηρήσετε προβλήματα στην ενσωμάτωση, επικοινωνήστε μαζί μας στο <a href=\"mailto:lab@imedd.org\" target=\"_blank\">lab@imedd.org</a> ή χρησιμοποιήστε τη <a href=\"https://www.imedd.org/el/contact/\" target=\"_blank\">φόρμα επικοινωνίας</a> με το iMEdD.",
 	"embed.incognito": "Ενσωματωμένοι χάρτες και γραφήματα δεν προβάλλονται σε χρήστες που έχουν επιλέξει, από τις ρυθμίσεις του φυλλομετρητή τους, να μη γίνεται χρήση cookies από τρίτες εφαρμογές.",
 	"v1": "% Διασωληνωμένων",
-	"v2": "% Εμβολιασμένων & Μη"
+	"v2": "% Εμβολιασμένων & Μη",
+	"aitoloakarnanias_ru_e": "Π.Ε. Αιτωλοακαρνανίας",
+	"lesbou_ru_e": "Ν. Λέσβου",
+	"argolidas_ru_e": "Π.Ε. Αργολίδας",
+	"agio-oros_ru_e": "Άγιο Όρος",
+	"euboias_ru_e": "Π.Ε. Ευβοίας",
+	"arkadias_ru_e": "Π.Ε. Αρκαδίας",
+	"artas_ru_e": "Π.Ε. Άρτας",
+	"attikes_ru_e": "Περιφέρεια Αττικής",
+	"akhaias_ru_e": "Π.Ε. Αχαϊας",
+	"boiotias_ru_e": "Π.Ε. Βοιωτίας",
+	"pules-eisodou_ru_e": "Εισαγόμενα (Πύλες Εισόδου)",
+	"grebenon_ru_e": "Π.Ε. Γρεβενών",
+	"ebrou_ru_e": "Π.Ε. Έβρου",
+	"eleias_ru_e": "Π.Ε. Ηλείας",
+	"emathias_ru_e": "Π.Ε. Ημαθίας",
+	"khalkidikes_ru_e": "Π.Ε. Χαλκιδικής",
+	"leukadas_ru_e": "Π.Ε. Λευκάδας",
+	"ioanninon_ru_e": "Π.Ε. Ιωαννίνων",
+	"trikalon_ru_e": "Π.Ε. Τρικάλων",
+	"dodekaneson_ru_e": "Ν. Δωδεκανήσου",
+	"kastorias_ru_e": "Π.Ε. Καστοριάς",
+	"kerkuras_ru_e": "Π.Ε. Κέρκυρας",
+	"kozanes_ru_e": "Π.Ε. Κοζάνης",
+	"khanion_ru_e": "Π.Ε. Χανίων",
+	"korinthou_ru_e": "Π.Ε. Κορινθίας",
+	"krouazieroploio_ru_e": "Κρουαζιερόπλοιο",
+	"larisas_ru_e": "Π.Ε. Λαρίσης",
+	"pellas_ru_e": "Π.Ε. Πέλλας",
+	"lasithiou_ru_e": "Π.Ε. Λασιθίου",
+	"magnesias_ru_e": "Ν. Μαγνησίας",
+	"messenias_ru_e": "Π.Ε. Μεσσηνίας",
+	"pierias_ru_e": "Π.Ε. Πιερίας",
+	"ksanthes_ru_e": "Π.Ε. Ξάνθης",
+	"prebezas_ru_e": "Π.Ε. Πρεβέζης",
+	"samou_ru_e": "Ν. Σάμου",
+	"serron_ru_e": "Π.Ε. Σερρών",
+	"phlorinas_ru_e": "Π.Ε. Φλώρινας",
+	"eurutanias_ru_e": "Π.Ε. Ευρυτανίας",
+	"zakunthou_ru_e": "Π.Ε. Ζακύνθου",
+	"phokidas_ru_e": "Π.Ε. Φωκίδας",
+	"lakonias_ru_e": "Π.Ε. Λακωνίας",
+	"khiou_ru_e": "Ν. Χίου",
+	"ellada_ru_e": "Χωρίς Γεωγραφικό Προσδιορισμό",
+	"erakleiou_ru_e": "Π.Ε. Ηρακλείου",
+	"thessalonikes_ru_e": "Π.Ε. Θεσσαλονίκης",
+	"kabalas_ru_e": "Ν. Καβάλας",
+	"karditsas_ru_e": "Π.Ε. Καρδίτσας",
+	"kephallonias_ru_e": "Ν. Κεφαλληνίας",
+	"autoboulos_ru_e": "Εισαγόμενα (Αυτοβούλως)",
+	"rethumnou_ru_e": "Π.Ε. Ρεθύμνης",
+	"dramas_ru_e": "Π.Ε. Δράμας",
+	"thesprotias_ru_e": "Π.Ε. Θεσπρωτίας",
+	"kilkis_ru_e": "Π.Ε. Κιλκίς",
+	"kukladon_ru_e": "Ν. Κυκλάδων",
+	"rodopes_ru_e": "Π.Ε. Ροδόπης",
+	"phthiotidas_ru_e": "Π.Ε. Φθιώτιδος",
+	
+	"aitoloakarnanias_ru": "Π.Ε. Αιτωλοακαρνανίας",
+	"argolidas_ru": "Π.Ε. Αργολίδας",
+	"agio-oros_ru": "Άγιο Όρος",
+	"euboias_ru": "Π.Ε. Ευβοίας",
+	"arkadias_ru": "Π.Ε. Αρκαδίας",
+	"artas_ru": "Π.Ε. Άρτας",
+	"akhaias_ru": "Π.Ε. Αχαϊας",
+	"boiotias_ru": "Π.Ε. Βοιωτίας",
+	"grebenon_ru": "Π.Ε. Γρεβενών",
+	"ebrou_ru": "Π.Ε. Έβρου",
+	"eleias_ru": "Π.Ε. Ηλείας",
+	"emathias_ru": "Π.Ε. Ημαθίας",
+	"khalkidikes_ru": "Π.Ε. Χαλκιδικής",
+	"leukadas_ru": "Π.Ε. Λευκάδας",
+	"ioanninon_ru": "Π.Ε. Ιωαννίνων",
+	"trikalon_ru": "Π.Ε. Τρικάλων",
+	"kastorias_ru": "Π.Ε. Καστοριάς",
+	"kerkuras_ru": "Π.Ε. Κέρκυρας",
+	"kozanes_ru": "Π.Ε. Κοζάνης",
+	"khanion_ru": "Π.Ε. Χανίων",
+	"korinthou_ru": "Π.Ε. Κορινθίας",
+	"larisas_ru": "Π.Ε. Λαρίσης",
+	"pellas_ru": "Π.Ε. Πέλλας",
+	"lasithiou_ru": "Π.Ε. Λασιθίου",
+	"messenias_ru": "Π.Ε. Μεσσηνίας",
+	"pierias_ru": "Π.Ε. Πιερίας",
+	"ksanthes_ru": "Π.Ε. Ξάνθης",
+	"prebezas_ru": "Π.Ε. Πρεβέζης",	
+	"serron_ru": "Π.Ε. Σερρών",
+	"phlorinas_ru": "Π.Ε. Φλώρινας",
+	"eurutanias_ru": "Π.Ε. Ευρυτανίας",
+	"zakunthou_ru": "Π.Ε. Ζακύνθου",
+	"phokidas_ru": "Π.Ε. Φωκίδας",
+	"lakonias_ru": "Π.Ε. Λακωνίας",	
+	"khiou_ru": "Π.Ε. Χίου",
+	"erakleiou_ru": "Π.Ε. Ηρακλείου",
+	"thessalonikes_ru": "Π.Ε. Θεσσαλονίκης",
+	"karditsas_ru": "Π.Ε. Καρδίτσας",
+	"rethumnou_ru": "Π.Ε. Ρεθύμνης",
+	"dramas_ru": "Π.Ε. Δράμας",
+	"thesprotias_ru": "Π.Ε. Θεσπρωτίας",
+	"kilkis_ru": "Π.Ε. Κιλκίς",
+	"rodopes_ru": "Π.Ε. Ροδόπης",
+	"phthiotidas_ru": "Π.Ε. Φθιώτιδος",
+
+	"lesbou_ru": "Π.Ε. Λέσβου",
+	"lemnou_ru": "Π.Ε. Λήμνου",
+	"samou_ru": "Π.Ε. Σάμου",
+	"ikarias_ru": "Π.Ε. Ικαρίας",
+	"kephallonias": "Π.Ε. Κεφαλληνίας",
+	"ithakis_pu": "Π.Ε. Ιθάκης",
+	"kabalas_ru": "Π.Ε. Καβάλας",
+	"thasou_ru": "Π.Ε. Θάσου",
+	"magnesias_ru": "Π.Ε. Μαγνησίας",
+	"sporades_ru": "Π.Ε. Σποράδων",
+	"syrou_ru": "Π.Ε. Σύρου",
+	"kea_ru": "Π.Ε. Κέας - Κύθνου",
+	"parou_ru": "Π.Ε. Πάρου",
+	"naxou_ru": "Π.Ε. Νάξου",
+	"tinou_ru": "Π.Ε. Τήνου",
+	"mikonou_ru": "Π.Ε. Μυκόνου",
+	"androu_ru": "Π.Ε. Άνδρου",
+	"thiras_ru": "Π.Ε. Θήρας",
+	"milou_ru": "Π.Ε. Μήλου",
+	"north_athens_ru": "Π.Ε. Βορείου Τομέα Αθηνών",
+	"west_athens_ru": "Π.Ε. Δυτικού Τομέα Αθηνών",
+	"central_athens_ru": "Π.Ε. Κεντρικού Τομέα Αθηνών",
+	"south_athens_ru": "Π.Ε. Νοτίου Τομέα Αθηνών",
+	"west_attika_ru": "Π.Ε. Δυτικής Αττικής",
+	"east_attika_ru": "Π.Ε. Ανατολικής Αττικής",
+	"piraeus_ru": "Π.Ε. Πειραιώς",
+	"islands_ru": "Π.Ε. Νήσων",
+	"rodou_ru": "Π.Ε. Ρόδου",
+	"karpathou_ru": "Π.Ε. Καρπάθου-Ηρωικής Νήσου Κάσου",
+	"ko_ru": "Π.Ε. Κω",
+	"kalumnou_ru": "Π.Ε. Καλύμνου",
+
+	"boreias-kerkuras": "Βόρειας Κέρκυρας",
+	"kentrikes-kerkuras-kai-diapontion-neson": "Κεντρικής Κέρκυρας και Διαποντίων Νήσων",
+	"notias-kerkuras": "Νότιας Κέρκυρας",
+	"argostoliou": "Αργοστολίου",
+	"lexouriou": "Ληξουρίου",
+	"sames": "Σάμης",
+	"serbion": "Σερβίων",
+	"belbentou": "Βελβεντού",
+	"anatolikes-samou": "Ανατολικής Σάμου",
+	"dutikes-samou": "Δυτικής Σάμου",
+	"amuntaiou": "Αμυνταίου",
+	"mutilenes": "Μυτιλήνης",
+	"dutikes-lesbou": "Δυτικής Λέσβου",
+	"aktiou-bonitsas": "Ακτιου - Βόνιτσας",
+	"androu": "Ανδρου",
+	"argous-mukenon": "Αργους - Μυκηνών",
+	"edessas": "Εδεσσας",
+	"elidas": "Ηλιδας",
+	"iliou": "Ιλίου",
+	"udras": "Υδρας",
+	"aiginas": "Αίγινας",
+	"abderon": "Αβδήρων",
+	"agias-barbaras": "Αγίας Βαρβάρας",
+	"agias-paraskeues": "Αγίας Παρασκευής",
+	"agiou-basileiou": "Αγίου Βασιλείου",
+	"agiou-demetriou": "Αγίου Δημητρίου",
+	"agiou-eustratiou": "Αγίου Ευστρατίου",
+	"agiou-nikolaou": "Αγίου Νικολάου",
+	"agion-anarguron-kamaterou": "Αγιων Αναργύρων - Καματερού",
+	"agathonesiou": "Αγαθονησίου",
+	"agias": "Αγιάς",
+	"agkistriou": "Αγκιστρίου",
+	"agraphon": "Αγράφων",
+	"agriniou": "Αγρινίου",
+	"ampelokepon-menemenes": "Αμπελοκήπων - Μενεμένης",
+	"athenaion": "Αθηναίων",
+	"aigaleo": "Αιγάλεω",
+	"aigialeias": "Αιγιαλείας",
+	"alimou": "Αλίμου",
+	"alexandreias": "Αλεξάνδρειας",
+	"alexandroupoles": "Αλεξανδρούπολης",
+	"amphikleias-elateias": "Αμφίκλειας - Ελάτειας",
+	"amphipoles": "Αμφίπολης",
+	"amphilokhias": "Αμφιλοχίας",
+	"anaphes": "Ανάφης",
+	"anatolikes-manes": "Ανατολικής Μάνης",
+	"andritsainas-krestenon": "Ανδρίτσαινας - Κρεστένων",
+	"andrabidas-kullenes": "Ανδραβίδας - Κυλλήνης",
+	"antiparou": "Αντιπάρου",
+	"aliartou-thespieon": "Αλιάρτου - Θεσπιέων",
+	"alonnesou": "Αλοννήσου",
+	"almurou": "Αλμυρού",
+	"almopias": "Αλμωπίας",
+	"moskhatou-taurou": "Μοσχάτου - Ταύρου",
+	"mouzakiou": "Μουζακίου",
+	"mukonou": "Μυκόνου",
+	"mulopotamou": "Μυλοποτάμου",
+	"mukes": "Μύκης",
+	"kamenon-bourlon": "Καμένων Βούρλων",
+	"naxou-and-mikron-kukladon": "Νάξου & Μικρών Κυκλάδων",
+	"amariou": "Αμαρίου",
+	"amarousiou": "Αμαρουσίου",
+	"amorgou": "Αμοργού",
+	"eroikes-poleos-naousas": "Ηρωικής Πόλεως Νάουσας",
+	"neas-zikhnes": "Νέας Ζίχνης",
+	"anogeion": "Ανωγείων",
+	"apokoronou": "Αποκορώνου",
+	"argitheas": "Αργιθέας",
+	"aristotele": "Αριστοτέλη",
+	"arrianon": "Αρριανών",
+	"artaion": "Αρταίων",
+	"arkhanon-asterousion": "Αρχανών - Αστερουσίων",
+	"arkhaias-olumpias": "Αρχαίας Ολυμπίας",
+	"aspropurgou": "Ασπροπύργου",
+	"astupalaias": "Αστυπάλαιας",
+	"neas-ionias": "Νέας Ιωνίας",
+	"akharnon": "Αχαρνών",
+	"bares-boulas-bouliagmenes": "Βάρης - Βούλας - Βουλιαγμένης",
+	"belou-bokhas": "Βέλου - Βόχας",
+	"beroias": "Βέροιας",
+	"biannou": "Βιάννου",
+	"bisaltias": "Βισαλτίας",
+	"boiou": "Βοϊου",
+	"brilession": "Βριλησσίων",
+	"bolbes": "Βόλβης",
+	"bolou": "Βόλου",
+	"boreias-kunourias": "Βόρειας Κυνουρίας",
+	"boreion-tzoumerkon": "Βορείων Τζουμέρκων",
+	"buronos": "Βύρωνος",
+	"galatsiou": "Γαλατσίου",
+	"gaudou": "Γαύδου",
+	"georgiou-karaiskake": "Γεωργίου Καραϊσκάκη",
+	"elioupoleos": "Ηλιουπόλεως",
+	"neas-smurnes": "Νέας Σμύρνης",
+	"nestou": "Νέστου",
+	"gluphadas": "Γλυφάδας",
+	"gortunias": "Γορτυνίας",
+	"grebenon": "Γρεβενών",
+	"gortunas": "Γόρτυνας",
+	"daphnes-umettou": "Δάφνης - Υμηττού",
+	"delta": "Δέλτα",
+	"diou-olumpou": "Δίου - Ολύμπου",
+	"dirphuon-messapion": "Διρφύων - Μεσσαπίων",
+	"delphon": "Δελφών",
+	"deskates": "Δεσκάτης",
+	"didumoteikhou": "Διδυμοτείχου",
+	"distomou-arakhobas-antikuras": "Διστόμου - Αράχοβας - Αντίκυρας",
+	"nikaias-agiou-i-rente": "Νίκαιας - Αγίου Ι. Ρέντη",
+	"naupaktias": "Ναυπακτίας",
+	"dionusou": "Διονύσου",
+	"domokou": "Δομοκού",
+	"doxatou": "Δοξάτου",
+	"dramas": "Δράμας",
+	"meteoron": "Μετεώρων",
+	"dutikes-akhaias": "Δυτικής Αχαϊας",
+	"dutikes-manes": "Δυτικής Μάνης",
+	"dodones": "Δωδώνης",
+	"doridos": "Δωρίδος",
+	"elassonas": "Ελασσόνας",
+	"nauplieon": "Ναυπλιέων",
+	"elaphonesou": "Ελαφονήσου",
+	"eleusinas": "Ελευσίνας",
+	"erakleiou-attikes": "Ηρακλείου Αττικής",
+	"thasou": "Θάσου",
+	"thermes": "Θέρμης",
+	"thermou": "Θέρμου",
+	"theras": "Θήρας",
+	"thermaikou": "Θερμαϊκού",
+	"ellenikou-arguroupoles": "Ελληνικού - Αργυρούπολης",
+	"emmanouel-pappa": "Εμμανουήλ Παππά",
+	"eordaias": "Εορδαίας",
+	"epidaurou": "Επιδαύρου",
+	"eretrias": "Ερέτριας",
+	"ermionidas": "Ερμιονίδας",
+	"erumanthou": "Ερυμάνθου",
+	"eurota": "Ευρώτα",
+	"zitsas": "Ζίτσας",
+	"zagoras-mouresiou": "Ζαγοράς - Μουρεσίου",
+	"zagoriou": "Ζαγορίου",
+	"zakunthou": "Ζακύνθου",
+	"zakharos": "Ζαχάρως",
+	"zerou": "Ζηρού",
+	"zographou": "Ζωγράφου",
+	"egoumenitsas": "Ηγουμενίτσας",
+	"erakleiou": "Ηρακλείου",
+	"erakleias": "Ηρακλείας",
+	"thessalonikes": "Θεσσαλονίκης",
+	"thebaion": "Θηβαίων",
+	"iasmou": "Ιάσμου",
+	"ierapetras": "Ιεράπετρας",
+	"ieras-poles-mesologgiou": "Ιεράς Πόλης Μεσολογγίου",
+	"ieton": "Ιητών",
+	"ithakes": "Ιθάκης",
+	"ikarias": "Ικαρίας",
+	"istiaias-aidepsou": "Ιστιαίας - Αιδηψού",
+	"ioanniton": "Ιωαννιτών",
+	"eroikes-nesou-kasou": "Ηρωικής Νήσου Κάσου",
+	"kato-neurokopiou": "Κάτω Νευροκοπίου",
+	"keas": "Κέας",
+	"kabalas": "Καβάλας",
+	"korudallou": "Κορυδαλλού",
+	"kropias": "Κρωπίας",
+	"kutheron": "Κυθήρων",
+	"konitsas": "Κόνιτσας",
+	"kuthnou": "Κύθνου",
+	"kumes-aliberiou": "Κύμης - Αλιβερίου",
+	"ko": "Κω",
+	"lerou": "Λέρου",
+	"lemnou": "Λήμνου",
+	"kaisarianes": "Καισαριανής",
+	"kalabruton": "Καλαβρύτων",
+	"kalamatas": "Καλαμάτας",
+	"kalamarias": "Καλαμαριάς",
+	"kallitheas": "Καλλιθέας",
+	"kalumnion": "Καλυμνίων",
+	"kantanou-selinou": "Καντάνου - Σελίνου",
+	"karditsas": "Καρδίτσας",
+	"karpathou": "Καρπάθου",
+	"karpenesiou": "Καρπενησίου",
+	"karustou": "Καρύστου",
+	"kassandras": "Κασσάνδρας",
+	"kastorias": "Καστοριάς",
+	"katerines": "Κατερίνης",
+	"kentrikon-tzoumerkon": "Κεντρικών Τζουμέρκων",
+	"keratsiniou-drapetsonas": "Κερατσινίου - Δραπετσώνας",
+	"lukobruses-peukes": "Λυκόβρυσης - Πεύκης",
+	"mandras-eidullias": "Μάνδρας - Ειδυλλίας",
+	"melou": "Μήλου",
+	"metamorphoseos": "Μεταμορφώσεως",
+	"metsobou": "Μετσόβου",
+	"monembasias": "Μονεμβασίας",
+	"kephisias": "Κηφισιάς",
+	"kileler": "Κιλελέρ",
+	"kilkis": "Κιλκίς",
+	"kissamou": "Κισσάμου",
+	"kozanes": "Κοζάνης",
+	"komotenes": "Κομοτηνής",
+	"kordeliou-euosmou": "Κορδελιού - Ευόσμου",
+	"korinthion": "Κορινθίων",
+	"limnes-plastera": "Λίμνης Πλαστήρα",
+	"lagkada": "Λαγκαδά",
+	"lamieon": "Λαμιέων",
+	"larisaion": "Λαρισαίων",
+	"laureotikes": "Λαυρεωτικής",
+	"lebadeon": "Λεβαδέων",
+	"leipson": "Λειψών",
+	"leukadas": "Λευκάδας",
+	"lokron": "Λοκρών",
+	"minoa-pediadas": "Μινώα Πεδιάδας",
+	"makrakomes": "Μακρακώμης",
+	"malebiziou": "Μαλεβιζίου",
+	"mantoudiou-limnes-agias-annas": "Μαντουδίου - Λίμνης - Αγίας Αννας",
+	"marathonos": "Μαραθώνος",
+	"markopoulou-mesogaias": "Μαρκοπούλου Μεσογαίας",
+	"maroneias-sapon": "Μαρωνείας - Σαπών",
+	"megistes": "Μεγίστης",
+	"megalopoles": "Μεγαλόπολης",
+	"meganesiou": "Μεγανησίου",
+	"megareon": "Μεγαρέων",
+	"messenes": "Μεσσήνης",
+	"neapoles-sukeon": "Νεάπολης - Συκεών",
+	"neas-propontidas": "Νέας Προποντίδας",
+	"oropediou-lasithiou": "Οροπεδίου Λασιθίου",
+	"orkhomenou": "Ορχομενού",
+	"pargas": "Πάργας",
+	"parou": "Πάρου",
+	"patmou": "Πάτμου",
+	"pellas": "Πέλλας",
+	"paggaiou": "Παγγαίου",
+	"paianias": "Παιανίας",
+	"paionias": "Παιονίας",
+	"palaiou-phalerou": "Παλαιού Φαλήρου",
+	"palama": "Παλαμά",
+	"nemeas": "Νεμέας",
+	"nestoriou": "Νεστορίου",
+	"nikolaou-skoupha": "Νικολάου Σκουφά",
+	"nisurou": "Νισύρου",
+	"notiou-peliou": "Νοτίου Πηλίου",
+	"notias-kunourias": "Νότιας Κυνουρίας",
+	"ksanthes": "Ξάνθης",
+	"kseromerou": "Ξηρομέρου",
+	"ksulokastrou-eurostines": "Ξυλοκάστρου - Ευρωστίνης",
+	"oinousson": "Οινουσσών",
+	"oikhalias": "Οιχαλίας",
+	"argous-orestikou": "Άργους Ορεστικού",
+	"orestiadas": "Ορεστιάδας",
+	"pallenes": "Παλλήνης",
+	"paxon": "Παξών",
+	"peristeriou": "Περιστερίου",
+	"papagou-kholargou": "Παπάγου - Χολαργού",
+	"paranestiou": "Παρανεστίου",
+	"patreon": "Πατρέων",
+	"paulou-mela": "Παύλου Μελά",
+	"petroupoleos": "Πετρουπόλεως",
+	"peneiou": "Πηνειού",
+	"platania": "Πλατανιά",
+	"polugurou": "Πολυγύρου",
+	"prebezas": "Πρέβεζας",
+	"prespon": "Πρεσπών",
+	"prosotsanes": "Προσοτσάνης",
+	"pulaias-khortiate": "Πυλαίας - Χορτιάτη",
+	"pogoniou": "Πωγωνίου",
+	"porou": "Πόρου",
+	"pudnas-kolindrou": "Πύδνας - Κολινδρού",
+	"pules": "Πύλης",
+	"pulou-nestoros": "Πύλου - Νέστορος",
+	"purgou": "Πύργου",
+	"rega-pheraiou": "Ρήγα Φεραίου",
+	"peiraios": "Πειραιώς",
+	"spetson": "Σπετσών",
+	"stulidas": "Στυλίδας",
+	"sphakion": "Σφακίων",
+	"sumes": "Σύμης",
+	"surou-ermoupoles": "Σύρου - Ερμούπολης",
+	"telou": "Τήλου",
+	"tanagras": "Τανάγρας",
+	"tempon": "Τεμπών",
+	"topeirou": "Τοπείρου",
+	"tripoles": "Τρίπολης",
+	"trikkaion": "Τρικκαίων",
+	"triphulias": "Τριφυλίας",
+	"troizenias-methanon": "Τροιζηνίας - Μεθάνων",
+	"turnabou": "Τυρνάβου",
+	"phaistou": "Φαιστού",
+	"pharkadonas": "Φαρκαδόνας",
+	"pharsalon": "Φαρσάλων",
+	"neas-philadelpheias-neas-khalkedonas": "Νέας Φιλαδέλφειας - Νέας Χαλκηδόνας",
+	"philiaton": "Φιλιατών",
+	"penteles": "Πεντέλης",
+	"peramatos": "Περάματος",
+	"raphenas-pikermiou": "Ραφήνας - Πικερμίου",
+	"rethumnes": "Ρεθύμνης",
+	"rodou": "Ρόδου",
+	"sikinou": "Σικίνου",
+	"siphnou": "Σίφνου",
+	"salaminos": "Σαλαμίνος",
+	"samothrakes": "Σαμοθράκης",
+	"saronikou": "Σαρωνικού",
+	"seriphou": "Σερίφου",
+	"serron": "Σερρών",
+	"seteias": "Σητείας",
+	"sithonias": "Σιθωνίας",
+	"sikuonion": "Σικυωνίων",
+	"sintikes": "Σιντικής",
+	"skiathou": "Σκιάθου",
+	"skopelou": "Σκοπέλου",
+	"skudras": "Σκύδρας",
+	"skurou": "Σκύρου",
+	"souliou": "Σουλίου",
+	"souphliou": "Σουφλίου",
+	"sophadon": "Σοφάδων",
+	"spartes": "Σπάρτης",
+	"spaton-artemidos": "Σπάτων - Αρτέμιδος",
+	"philothees-psukhikou": "Φιλοθέης - Ψυχικού",
+	"phlorinas": "Φλώρινας",
+	"pholegandrou": "Φολεγάνδρου",
+	"phournon-korseon": "Φούρνων Κορσεών",
+	"phules": "Φυλής",
+	"khalkes": "Χάλκης",
+	"khiou": "Χίου",
+	"khaidariou": "Χαϊδαρίου",
+	"oropou": "Ωρωπού",
+	"kimolou": "Κιμώλου",
+	"tenou": "Τήνου",
+	"khalandriou": "Χαλανδρίου",
+	"khalkedonos": "Χαλκηδόνος",
+	"khalkideon": "Χαλκιδέων",
+	"khanion": "Χανίων",
+	"khersonesou": "Χερσονήσου",
+	"eroikes-nesou-psaron": "Ηρωικής Νήσου Ψαρών",
+	"oraiokastrou": "Ωραιοκάστρου"
 }
