--- a/public/locale/en.json
+++ b/public/locale/en.json
@@ -1,12 +1,17 @@
 {
 	"app.title": "",
-	"app.subtitle": "The spread of the disease in Greece and worldwide",
+	"app.subtitle": "The spread of the disease in Greece.",
 	"view.greece": "Greece",
 	"view.global": "World",
 	"link.about": "Our App & the Data",
 	"lastupdate": "Last update",
+	"week": "Week",
+	"increase": "",
+	"in_the_average": "increase in the average SARS-CoV-2 viral load concentration in urban wastewater per 100,000 inhabitants.",
 	"cases": "cases | case",
 	"deaths": "deaths | death",
+	"vaccinations": "vaccinations | vaccination",
+	"admissions" : "admissions",
 	"total": "total",
 	"active": "active",
 	"intubated": "intubated",
@@ -16,12 +21,475 @@
 	"occupied": "occupied",
 	"total cases": "total cases",
 	"total deaths": "total deaths",
+	"total admissions": "total admissions",
+	"avg intubated": "average intubated",
+	"overall avg intubated": "overall avg intubated",
+	"total vaccinations": "total vaccinations",
 	"note.widget.hospitals": "Activate this filter to see ...",
-	"button.in.greece": "INSIGHTS ON GREECE",
+	"button.in.greece": "INSIGHTS",
 	"button.in.world": "INSIGHTS ON THE WORLD",
 	"label.period": "time period",
 	"embed.body": "With the code bellow you may integrate the map or the chart you are interested in, on your website. If you notice problems with integration, contact us at <a href=\"mailto:lab@imedd.org\" target=\"_blank\">lab@imedd.org</a> or use the <a href=\"https://www.imedd.org/el/contact/\" target=\"_blank\">contact form</a> at iMEdD.",
 	"embed.incognito": "Embedded maps and charts are not displayed to users who have set their browser to block third-party cookies.",
 	"v1": "% Intubated",
-	"v2": "% (UN)Vaccinated"
+	"v2": "% (UN)Vaccinated",
+	"aitoloakarnanias_ru_e": "Aetolia-Acarnania",
+	"lesbou_ru_e": "Lesbos",
+	"argolidas_ru_e": "Argolis",
+	"agio-oros_ru_e": "Mount Athos",
+	"euboias_ru_e": "Euboea",
+	"arkadias_ru_e": "Arcadia",
+	"artas_ru_e": "Arta",
+	"attikes_ru_e": "Lesbos",
+	"akhaias_ru_e": "Achaea",
+	"boiotias_ru_e": "Boeotia",
+	"pules-eisodou_ru_e": "Εισαγόμενα (Πύλες Εισόδου)",
+	"grebenon_ru_e": "Grevena",
+	"ebrou_ru_e": "Ebrou",
+	"eleias_ru_e": "Elis",
+	"emathias_ru_e": "Imathia",
+	"khalkidikes_ru_e": "Chalkidiki",
+	"leukadas_ru_e": "Lefkada",
+	"ioanninon_ru_e": "Ioannina",
+	"trikalon_ru_e": "Trikala",
+	"dodekaneson_ru_e": "Dodecanese",
+	"kastorias_ru_e": "Kastoria",
+	"kerkuras_ru_e": "Corfu (Kerkyra)",
+	"kozanes_ru_e": "Kozani",
+	"khanion_ru_e": "Chania",
+	"korinthou_ru_e": "Corinthia",
+	"krouazieroploio_ru_e": "Κρουαζιερόπλοιο",
+	"larisas_ru_e": "Larissa",
+	"pellas_ru_e": "Pella",
+	"lasithiou_ru_e": "Lasithi",
+	"magnesias_ru_e": "Magnesia",
+	"messenias_ru_e": "Messenia",
+	"pierias_ru_e": "Pieria",
+	"ksanthes_ru_e": "Xanthi",
+	"prebezas_ru_e": "Preveza",
+	"samou_ru_e": "Samos",
+	"serron_ru_e": "Serres",
+	"phlorinas_ru_e": "Florina",
+	"eurutanias_ru_e": "Evrytania",
+	"zakunthou_ru_e": "Zakynthos",
+	"phokidas_ru_e": "Phocis",
+	"lakonias_ru_e": "Laconia",
+	"khiou_ru_e": "Chios",
+	"ellada_ru_e": "Χωρίς Γεωγραφικό Προσδιορισμό",
+	"erakleiou_ru_e": "Herakleion",
+	"thessalonikes_ru_e": "Thessaloniki",
+	"kabalas_ru_e": "Kavala",
+	"karditsas_ru_e": "Karditsa",
+	"kephallonias_ru_e": "Kefalonia",
+	"autoboulos": "Εισαγόμενα (Αυτοβούλως)",
+	"rethumnou_ru_e": "Rethymno",
+	"dramas_ru_e": "Drama",
+	"thesprotias_ru_e": "Thesprotia",
+	"kilkis_ru_e": "Kilkis",
+	"kukladon_ru_e": "Cyclades",
+	"rodopes_ru_e": "Rhodope",
+	"phthiotidas_ru_e": "Phthiotis",
+	"aitoloakarnanias_ru": "Aetolia-Acarnania",
+	"argolidas_ru": "Argolis",
+	"euboias_ru": "Euboea",
+	"arkadias_ru": "Arcadia",
+	"artas_ru": "Arta",
+	"akhaias_ru": "Achaea",
+	"boiotias_ru": "Boeotia",
+	"grebenon_ru": "Grevena",
+	"ebrou_ru": "Ebrou",
+	"eleias_ru": "Elis",
+	"emathias_ru": "Imathia",
+	"khalkidikes_ru": "Chalkidiki",
+	"leukadas_ru": "Lefkada",
+	"ioanninon_ru": "Ioannina",
+	"trikalon_ru": "Trikala",
+	"kastorias_ru": "Kastoria",
+	"kerkuras_ru": "Corfu (Kerkyra)",
+	"kozanes_ru": "Kozani",
+	"khanion_ru": "Chania",
+	"korinthou_ru": "Corinthia",
+	"larisas_ru": "Larissa",
+	"pellas_ru": "Pella",
+	"lasithiou_ru": "Lasithi",
+	"messenias_ru": "Messenia",
+	"pierias_ru": "Pieria",
+	"ksanthes_ru": "Xanthi",
+	"prebezas_ru": "Preveza",
+	"serron_ru": "Serres",
+	"phlorinas_ru": "Florina",
+	"eurutanias_ru": "Evrytania",
+	"zakunthou_ru": "Zakynthos",
+	"phokidas_ru": "Phocis",
+	"lakonias_ru": "Laconia",
+	"khiou_ru": "Chios",
+	"erakleiou_ru": "Herakleion",
+	"thessalonikes_ru": "Thessaloniki",
+	"karditsas_ru": "Karditsa",
+	"rethumnou_ru": "Rethymno",
+	"dramas_ru": "Drama",
+	"thesprotias_ru": "Thesprotia",
+	"kilkis_ru": "Kilkis",
+	"rodopes_ru": "Rhodope",
+	"phthiotidas_ru": "Phthiotis",
+	"lesbou_ru": "Lesbos",
+	"lemnou_ru": "Lemnou",
+	"samou_ru": "Samos",
+	"ikarias_ru": "Ikaria",
+	"kephallonias": "Kefalonia",
+	"ithakis_pu": "Ithaka",
+	"kabalas_ru": "Kavala",
+	"thasou_ru": "Thasos",
+	"magnesias_ru": "Magnesia",
+	"sprades_ru": "Sporadon",
+	"syrou_ru": "Syros",
+	"kea_ru": "Kea - Kuthnos",
+	"parou_ru": "Paros",
+	"naxou_ru": "Naxos",
+	"tinou_ru": "Tinos",
+	"mikonou_ru": "Mykonos",
+	"androu_ru": "Andros",
+	"thiras_ru": "Thera",
+	"milou_ru": "Milos",
+	"north_athens_ru": "North Athens",
+	"west_athens_ru": "West Athens",
+	"central_athens_ru": "Central Athens",
+	"south_athens_ru": "South Athens",
+	"west_attika_ru": "West Attica",
+	"east_attika_ru": "East Attica",
+	"piraeus_ru": "Piraeus",
+	"islands_ru": "Islands",
+	"rodou_ru": "Rodou",
+	"karpathou_ru": "Karpathou",
+	"ko_ru": "Ko",
+	"kalumnou_ru": "Kalumnos",
+	"boreias-kerkuras": "Boreias Kerkuras",
+	"kentrikes-kerkuras-kai-diapontion-neson": "Kentrikes Kerkuras Kai Diapontion Neson",
+	"notias-kerkuras": "Notias Kerkuras",
+	"argostoliou": "Argostoliou",
+	"lexouriou": "Lexouriou",
+	"sames": "Sames",
+	"serbion": "Serbion",
+	"belbentou": "Belbentou",
+	"anatolikes-samou": "Anatolikes Samou",
+	"dutikes-samou": "Dutikes Samou",
+	"amuntaiou": "Amuntaiou",
+	"aktiou-bonitsas": "Aktiou Bonitsas",
+	"androu": "Androu",
+	"argous-mukenon": "Argous Mukenon",
+	"edessas": "Edessas",
+	"elidas": "Elidas",
+	"iliou": "Iliou",
+	"udras": "Udras",
+	"aiginas": "Aiginas",
+	"abderon": "Abderon",
+	"agias-barbaras": "Agias Barbaras",
+	"agias-paraskeues": "Agias Paraskeues",
+	"agiou-basileiou": "Agiou Basileiou",
+	"agiou-demetriou": "Agiou Demetriou",
+	"agiou-eustratiou": "Agiou Eustratiou",
+	"agiou-nikolaou": "Agiou Nikolaou",
+	"agion-anarguron-kamaterou": "Agion Anarguron Kamaterou",
+	"agathonesiou": "Agathonesiou",
+	"agias": "Agias",
+	"agkistriou": "Agkistriou",
+	"agraphon": "Agraphon",
+	"agriniou": "Agriniou",
+	"ampelokepon-menemenes": "Ampelokepon Menemenes",
+	"athenaion": "Athenaion",
+	"aigaleo": "Aigaleo",
+	"aigialeias": "Aigialeias",
+	"alimou": "Alimou",
+	"alexandreias": "Alexandreias",
+	"alexandroupoles": "Alexandroupoles",
+	"amphikleias-elateias": "Amphikleias Elateias",
+	"amphipoles": "Amphipoles",
+	"amphilokhias": "Amphilokhias",
+	"anaphes": "Anaphes",
+	"anatolikes-manes": "Anatolikes Manes",
+	"andritsainas-krestenon": "Andritsainas Krestenon",
+	"andrabidas-kullenes": "Andrabidas Kullenes",
+	"antiparou": "Antiparou",
+	"aliartou-thespieon": "Aliartou Thespieon",
+	"alonnesou": "Alonnesou",
+	"almurou": "Almurou",
+	"almopias": "Almopias",
+	"moskhatou-taurou": "Moskhatou Taurou",
+	"mouzakiou": "Mouzakiou",
+	"mukonou": "Mukonou",
+	"mulopotamou": "Mulopotamou",
+	"mukes": "Mukes",
+	"kamenon-bourlon": "Kamenon Bourlon",
+	"naxou-and-mikron-kukladon": "Naxou And Mikron Kukladon",
+	"amariou": "Amariou",
+	"amarousiou": "Amarousiou",
+	"amorgou": "Amorgou",
+	"eroikes-poleos-naousas": "Eroikes Poleos Naousas",
+	"neas-zikhnes": "Neas Zikhnes",
+	"anogeion": "Anogeion",
+	"apokoronou": "Apokoronou",
+	"argitheas": "Argitheas",
+	"aristotele": "Aristotele",
+	"arrianon": "Arrianon",
+	"artaion": "Artaion",
+	"arkhanon-asterousion": "Arkhanon Asterousion",
+	"arkhaias-olumpias": "Arkhaias Olumpias",
+	"aspropurgou": "Aspropurgou",
+	"astupalaias": "Astupalaias",
+	"neas-ionias": "Neas Ionias",
+	"akharnon": "Akharnon",
+	"bares-boulas-bouliagmenes": "Bares Boulas Bouliagmenes",
+	"belou-bokhas": "Belou Bokhas",
+	"beroias": "Beroias",
+	"biannou": "Biannou",
+	"bisaltias": "Bisaltias",
+	"boiou": "Boiou",
+	"brilession": "Brilession",
+	"bolbes": "Bolbes",
+	"bolou": "Bolou",
+	"boreias-kunourias": "Boreias Kunourias",
+	"boreion-tzoumerkon": "Boreion Tzoumerkon",
+	"buronos": "Buronos",
+	"galatsiou": "Galatsiou",
+	"gaudou": "Gaudou",
+	"georgiou-karaiskake": "Georgiou Karaiskake",
+	"elioupoleos": "Elioupoleos",
+	"neas-smurnes": "Neas Smurnes",
+	"nestou": "Nestou",
+	"gluphadas": "Gluphadas",
+	"gortunias": "Gortunias",
+	"grebenon": "Grebenon",
+	"gortunas": "Gortunas",
+	"daphnes-umettou": "Daphnes Umettou",
+	"delta": "Delta",
+	"diou-olumpou": "Diou Olumpou",
+	"dirphuon-messapion": "Dirphuon Messapion",
+	"delphon": "Delphon",
+	"deskates": "Deskates",
+	"didumoteikhou": "Didumoteikhou",
+	"distomou-arakhobas-antikuras": "Distomou Arakhobas Antikuras",
+	"nikaias-agiou-i-rente": "Nikaias Agiou I Rente",
+	"naupaktias": "Naupaktias",
+	"dionusou": "Dionusou",
+	"domokou": "Domokou",
+	"doxatou": "Doxatou",
+	"dramas": "Dramas",
+	"dutikes-akhaias": "Dutikes Akhaias",
+	"dutikes-manes": "Dutikes Manes",
+	"dodones": "Dodones",
+	"doridos": "Doridos",
+	"elassonas": "Elassonas",
+	"nauplieon": "Nauplieon",
+	"elaphonesou": "Elaphonesou",
+	"eleusinas": "Eleusinas",
+	"erakleiou-attikes": "Erakleiou Attikes",
+	"thasou": "Thasou",
+	"thermes": "Thermes",
+	"thermou": "Thermou",
+	"meteoron": "Meteoron",
+	"theras": "Theras",
+	"thermaikou": "Thermaikou",
+	"ellenikou-arguroupoles": "Ellenikou Arguroupoles",
+	"emmanouel-pappa": "Emmanouel Pappa",
+	"eordaias": "Eordaias",
+	"epidaurou": "Epidaurou",
+	"eretrias": "Eretrias",
+	"ermionidas": "Ermionidas",
+	"erumanthou": "Erumanthou",
+	"eurota": "Eurota",
+	"zitsas": "Zitsas",
+	"zagoras-mouresiou": "Zagoras Mouresiou",
+	"zagoriou": "Zagoriou",
+	"zakunthou": "Zakunthou",
+	"zakharos": "Zakharos",
+	"zerou": "Zerou",
+	"zographou": "Zographou",
+	"egoumenitsas": "Egoumenitsas",
+	"erakleiou": "Erakleiou",
+	"erakleias": "Erakleias",
+	"thessalonikes": "Thessalonikes",
+	"thebaion": "Thebaion",
+	"iasmou": "Iasmou",
+	"ierapetras": "Ierapetras",
+	"ieras-poles-mesologgiou": "Ieras Poles Mesologgiou",
+	"ieton": "Ieton",
+	"ithakes": "Ithakes",
+	"ikarias": "Ikarias",
+	"istiaias-aidepsou": "Istiaias Aidepsou",
+	"ioanniton": "Ioanniton",
+	"eroikes-nesou-kasou": "Eroikes Nesou Kasou",
+	"kato-neurokopiou": "Kato Neurokopiou",
+	"keas": "Keas",
+	"kabalas": "Kabalas",
+	"korudallou": "Korudallou",
+	"kropias": "Kropias",
+	"kutheron": "Kutheron",
+	"konitsas": "Konitsas",
+	"kuthnou": "Kuthnou",
+	"kumes-aliberiou": "Kumes Aliberiou",
+	"ko": "Ko",
+	"lerou": "Lerou",
+	"lemnou": "Lemnou",
+	"kaisarianes": "Kaisarianes",
+	"kalabruton": "Kalabruton",
+	"kalamatas": "Kalamatas",
+	"kalamarias": "Kalamarias",
+	"kallitheas": "Kallitheas",
+	"kalumnion": "Kalumnion",
+	"kantanou-selinou": "Kantanou Selinou",
+	"karditsas": "Karditsas",
+	"karpathou": "Karpathou",
+	"karpenesiou": "Karpenesiou",
+	"karustou": "Karustou",
+	"kassandras": "Kassandras",
+	"kastorias": "Kastorias",
+	"katerines": "Katerines",
+	"kentrikon-tzoumerkon": "Kentrikon Tzoumerkon",
+	"keratsiniou-drapetsonas": "Keratsiniou Drapetsonas",
+	"lukobruses-peukes": "Lukobruses Peukes",
+	"mandras-eidullias": "Mandras Eidullias",
+	"melou": "Melou",
+	"metamorphoseos": "Metamorphoseos",
+	"metsobou": "Metsobou",
+	"monembasias": "Monembasias",
+	"kephisias": "Kephisias",
+	"kileler": "Kileler",
+	"kilkis": "Kilkis",
+	"kissamou": "Kissamou",
+	"kozanes": "Kozanes",
+	"komotenes": "Komotenes",
+	"kordeliou-euosmou": "Kordeliou Euosmou",
+	"korinthion": "Korinthion",
+	"limnes-plastera": "Limnes Plastera",
+	"lagkada": "Lagkada",
+	"lamieon": "Lamieon",
+	"larisaion": "Larisaion",
+	"laureotikes": "Laureotikes",
+	"lebadeon": "Lebadeon",
+	"leipson": "Leipson",
+	"leukadas": "Leukadas",
+	"lokron": "Lokron",
+	"minoa-pediadas": "Minoa Pediadas",
+	"makrakomes": "Makrakomes",
+	"malebiziou": "Malebiziou",
+	"mantoudiou-limnes-agias-annas": "Mantoudiou Limnes Agias Annas",
+	"marathonos": "Marathonos",
+	"markopoulou-mesogaias": "Markopoulou Mesogaias",
+	"maroneias-sapon": "Maroneias Sapon",
+	"megistes": "Megistes",
+	"megalopoles": "Megalopoles",
+	"meganesiou": "Meganesiou",
+	"megareon": "Megareon",
+	"messenes": "Messenes",
+	"neapoles-sukeon": "Neapoles Sukeon",
+	"neas-propontidas": "Neas Propontidas",
+	"oropediou-lasithiou": "Oropediou Lasithiou",
+	"orkhomenou": "Orkhomenou",
+	"pargas": "Pargas",
+	"parou": "Parou",
+	"patmou": "Patmou",
+	"pellas": "Pellas",
+	"paggaiou": "Paggaiou",
+	"paianias": "Paianias",
+	"paionias": "Paionias",
+	"palaiou-phalerou": "Palaiou Phalerou",
+	"palama": "Palama",
+	"nemeas": "Nemeas",
+	"nestoriou": "Nestoriou",
+	"nikolaou-skoupha": "Nikolaou Skoupha",
+	"nisurou": "Nisurou",
+	"notiou-peliou": "Notiou Peliou",
+	"notias-kunourias": "Notias Kunourias",
+	"ksanthes": "Ksanthes",
+	"kseromerou": "Kseromerou",
+	"ksulokastrou-eurostines": "Ksulokastrou Eurostines",
+	"oinousson": "Oinousson",
+	"oikhalias": "Oikhalias",
+	"argous-orestikou": "Argous Orestikou",
+	"orestiadas": "Orestiadas",
+	"pallenes": "Pallenes",
+	"paxon": "Paxon",
+	"peristeriou": "Peristeriou",
+	"papagou-kholargou": "Papagou Kholargou",
+	"paranestiou": "Paranestiou",
+	"patreon": "Patreon",
+	"paulou-mela": "Paulou Mela",
+	"petroupoleos": "Petroupoleos",
+	"peneiou": "Peneiou",
+	"platania": "Platania",
+	"polugurou": "Polugurou",
+	"prebezas": "Prebezas",
+	"prespon": "Prespon",
+	"prosotsanes": "Prosotsanes",
+	"pulaias-khortiate": "Pulaias Khortiate",
+	"pogoniou": "Pogoniou",
+	"porou": "Porou",
+	"pudnas-kolindrou": "Pudnas Kolindrou",
+	"pules": "Pules",
+	"pulou-nestoros": "Pulou Nestoros",
+	"purgou": "Purgou",
+	"rega-pheraiou": "Rega Pheraiou",
+	"peiraios": "Peiraios",
+	"spetson": "Spetson",
+	"stulidas": "Stulidas",
+	"sphakion": "Sphakion",
+	"sumes": "Sumes",
+	"surou-ermoupoles": "Surou Ermoupoles",
+	"telou": "Telou",
+	"tanagras": "Tanagras",
+	"tempon": "Tempon",
+	"topeirou": "Topeirou",
+	"tripoles": "Tripoles",
+	"trikkaion": "Trikkaion",
+	"triphulias": "Triphulias",
+	"troizenias-methanon": "Troizenias Methanon",
+	"turnabou": "Turnabou",
+	"phaistou": "Phaistou",
+	"pharkadonas": "Pharkadonas",
+	"pharsalon": "Pharsalon",
+	"neas-philadelpheias-neas-khalkedonas": "Neas Philadelpheias Neas Khalkedonas",
+	"philiaton": "Philiaton",
+	"penteles": "Penteles",
+	"peramatos": "Peramatos",
+	"raphenas-pikermiou": "Raphenas Pikermiou",
+	"rethumnes": "Rethumnes",
+	"rodou": "Rodou",
+	"sikinou": "Sikinou",
+	"siphnou": "Siphnou",
+	"salaminos": "Salaminos",
+	"samothrakes": "Samothrakes",
+	"saronikou": "Saronikou",
+	"seriphou": "Seriphou",
+	"serron": "Serron",
+	"seteias": "Seteias",
+	"sithonias": "Sithonias",
+	"sikuonion": "Sikuonion",
+	"sintikes": "Sintikes",
+	"skiathou": "Skiathou",
+	"skopelou": "Skopelou",
+	"skudras": "Skudras",
+	"skurou": "Skurou",
+	"souliou": "Souliou",
+	"souphliou": "Souphliou",
+	"sophadon": "Sophadon",
+	"spartes": "Spartes",
+	"spaton-artemidos": "Spaton Artemidos",
+	"philothees-psukhikou": "Philothees Psukhikou",
+	"phlorinas": "Phlorinas",
+	"pholegandrou": "Pholegandrou",
+	"phournon-korseon": "Phournon Korseon",
+	"phules": "Phules",
+	"khalkes": "Khalkes",
+	"khiou": "Khiou",
+	"khaidariou": "Khaidariou",
+	"oropou": "Oropou",
+	"kimolou": "Kimolou",
+	"tenou": "Tenou",
+	"khalandriou": "Khalandriou",
+	"khalkedonos": "Khalkedonos",
+	"khalkideon": "Khalkideon",
+	"khanion": "Khanion",
+	"khersonesou": "Khersonesou",
+	"eroikes-nesou-psaron": "Eroikes Nesou Psaron",
+	"oraiokastrou_m": "Oraiokastrou"
 }
