--- a/public/locale/locale.json
+++ b/public/locale/locale.json
@@ -18,32 +18,6 @@
 	"% INTUBATED": "% ΔΙΑΣΩΛ/ΜΕΝΩΝ",
 	"% (UN)VACCINATED": "% ΕΜΒΟΛ/ΜΕΝΩΝ & ΜΗ",
 	"unvaccinated": "ανεμβολιαστοι",
-	"Central Athens": "Π.Ε. Κεντρικού Τομέα Αθηνών",
-	"North Athens": "Π.Ε. Βόρειου Τομεα Αθηνών",
-	"Piraeus": "Π.Ε. Πειραιώς",
-	"Lemnos": "Π.Ε. Λήμνου",
-	"West Athens": "Π.Ε. Δυτικού Τομέα Αθηνών",
-	"Syros": "Π.Ε. Σύρου",
-	"Kalymnos": "Π.Ε. Καλύμνου",
-	"West Attica": "Π.Ε. Δυτικής Αττικής",
-	"Ikaria": "Π.Ε. Ικαρίας",
-	"Karpathos": "Π.Ε. Καρπάθου",
-	"Rhodes": "Π.Ε. Ρόδου",
-	"Naxos": "Π.Ε. Νάξου",
-	"East Attica": "Π.Ε. Ανατολικής Αττικής",
-	"Kos": "Π.Ε. Κώ",
-	"Santorini": "Π.Ε. Θήρας",
-	"South Athens": "Π.Ε. Νότιου Τομεα Αθηνών",
-	"Islands (Attica)": "Π.Ε. Νήσων",
-	"Kea - Kythnos": "Π.Ε. Κέας - Κύθνου",
-	"Tinos": "Π.Ε. Τήνου",
-	"Paros": "Π.Ε. Πάρου",
-	"Mykonos": "Π.Ε. Μυκόνου",
-	"Ithaca": "Π.Ε. Ιθάκης",
-	"Milos": "Π.Ε. Μήλου",
-	"Thasos": "Π.Ε. Θάσου",
-	"Andros": "Π.Ε. Άνδρου",
-	"Sporades": "Π.Ε. Σποράδων",
 	"Percentage": "Ποσοστό",
 	"Vaccination": "Εμβολιασμός",
 	"of population": "του πληθυσμού",
@@ -63,9 +37,13 @@
 	"(7-day mov avg)": "(Κυλιόμενος μ.ο. 7 ημερών)",
 	"7D Mov Avg": "M.O. 7 Ημ.",
 	"Map": "Χάρτης",
+	"Home": "Αρχική",
+	"Charts": "Διαγράμματα",
+	"Search": "Αναζήτηση",
 	"View": "Προβολή",
 	"Area": "Περιοχή",
 	"All": "ΟΛΑ",
+	"Municipality": "Δήμος",
 	"All Values": "Όλες τις τιμές",
 	"No Data": "Έλλειψη Δεδομένων",
 	"Country": "Χώρα",
@@ -85,12 +63,14 @@
 	"Last 3 months": "Τελευταίο τρίμηνο",
 	"Historical data": "Από την αρχή",
 	"Daily": "Ημερήσια",
+	"Weekly": "Εβδομαδιαία",
 	"Cumulative": "Αθροιστικά",
 	"Per 100K": "Ανά 100 χιλ.",
 	"Daily Per 100K": "Ημερήσια Ανά 100 χιλ.",
+	"Weekly Per 100K": "Εβδομαδιαία Ανά 100 χιλ.",
 	"Cumulative Per 100K": "Αθροιστικά Ανά 100 χιλ.",
 	"Per 1M": "Ανά 1 εκατ.",
-	"Weekly": "Ανά Εβδομάδα",
+	"Per Week": "Ανά Εβδομάδα",
 	"Contact": "Επικοινωνία",
 	"Terms of Use": "Όροι Χρήσης",
 	"7-Day Moving Average": "Κυλιόμενος Μέσος Όρος 7 Ημερών",
@@ -100,374 +80,8 @@
 	"Intubated": "Διασωληνωμένοι",
 	"critical": "Διασωληνωμένοι",
 	"Per 100K of population": "Ανά 100 χιλ. πληθυσμού",
-	"Active Cases" : "Ενεργά Κρούσματα" ,
-	"No Location Provided" : "Χωρίς Γεωγραφικό Προσδιορισμό" ,
-	"Imported (Detected at the entry points)" : "Εισαγόμενα (Πύλες Εισόδου)" ,
-	"Imported (They asked to be tested)" : "Εισαγόμενα (Αυτοβούλως)" ,
-	"Evros" : "Π.Ε. Έβρου" ,
-	"Xanthi" : "Π.Ε. Ξάνθης" ,
-	"Rhodope" : "Π.Ε. Ροδόπης" ,
-	"Drama" : "Π.Ε. Δράμας" ,
-	"Kavala" : "Ν. Καβάλας" ,
-	"Imathia" : "Π.Ε. Ημαθίας" ,
-	"Thessaloniki" : "Π.Ε. Θεσσαλονίκης" ,
-	"Kilkis" : "Π.Ε. Κιλκίς" ,
-	"Pella" : "Π.Ε. Πέλλας" ,
-	"Pieria" : "Π.Ε. Πιερίας" ,
-	"Serres" : "Π.Ε. Σερρών" ,
-	"Chalkidiki" : "Π.Ε. Χαλκιδικής" ,
-	"Mount Athos" : "Άγιο Όρος" ,
-	"Grevena" : "Π.Ε. Γρεβενών" ,
-	"Kastoria" : "Π.Ε. Καστοριάς" ,
-	"Kozani" : "Π.Ε. Κοζάνης" ,
-	"Florina" : "Π.Ε. Φλώρινας" ,
-	"Karditsa" : "Π.Ε. Καρδίτσας" ,
-	"Larissa" : "Π.Ε. Λαρίσης" ,
-	"Magnesia" : "Ν. Μαγνησίας" ,
-	"Trikala" : "Π.Ε. Τρικάλων" ,
-	"Arta" : "Π.Ε. Άρτας" ,
-	"Thesprotia" : "Π.Ε. Θεσπρωτίας" ,
-	"Ioannina" : "Π.Ε. Ιωαννίνων" ,
-	"Preveza" : "Π.Ε. Πρεβέζης" ,
-	"Zakynthos" : "Π.Ε. Ζακύνθου" ,
-	"Corfu (Kerkyra)" : "Π.Ε. Κέρκυρας" ,
-	"Kefalonia" : "Ν. Κεφαλληνίας" ,
-	"Lefkada" : "Π.Ε. Λευκάδας" ,
-	"Aetolia-Acarnania" : "Π.Ε. Αιτωλοακαρνανίας" ,
-	"Achaea" : "Π.Ε. Αχαϊας" ,
-	"Elis" : "Π.Ε. Ηλείας" ,
-	"Boeotia" : "Π.Ε. Βοιωτίας" ,
-	"Euboea" : "Π.Ε. Ευβοίας" ,
-	"Evrytania" : "Π.Ε. Ευρυτανίας" ,
-	"Phthiotis" : "Π.Ε. Φθιώτιδος" ,
-	"Phocis" : "Π.Ε. Φωκίδας" ,
-	"Argolis" : "Π.Ε. Αργολίδας" ,
-	"Arcadia" : "Π.Ε. Αρκαδίας" ,
-	"Corinthia" : "Π.Ε. Κορινθίας" ,
-	"Laconia" : "Π.Ε. Λακωνίας" ,
-	"Messenia" : "Π.Ε. Μεσσηνίας" ,
-	"Attica" : "Περιφέρεια Αττικής" ,
-	"Lesbos" : "Ν. Λέσβου" ,
-	"Samos" : "Ν. Σάμου" ,
-	"Chios" : "Ν. Χίου" ,
-	"Dodecanese" : "Ν. Δωδεκανήσου" ,
-	"Cyclades" : "Ν. Κυκλάδων" ,
-	"Herakleion" : "Π.Ε. Ηρακλείου" ,
-	"Lasithi" : "Π.Ε. Λασιθίου" ,
-	"Rethymno" : "Π.Ε. Ρεθύμνης" ,
-	"Chania" : "Π.Ε. Χανίων" ,
-	"North Korea" : "Βόρεια Κορέα" ,
-	"South Korea" : "Νότια Κορέα" ,
-	"Korea, Republic of" : "Νότια Κορέα" ,
-	"S. Korea" : "Νότια Κορέα" ,
-	"Korea, South" : "Νότια Κορέα" ,
-	"Albania" : "Αλβανία" ,
-	"Maldives": "Μαλδίβες",
-	"Aland" : "Άλαντ" ,
-	"Andorra" : "Ανδόρρα" ,
-	"Austria" : "Αυστρία" ,
-	"Belgium" : "Βέλγιο" ,
-	"Bulgaria" : "Βουλγαρία" ,
-	"Bosnia and Herzegovina" : "Βοσνία-Ερζεγοβίνη" ,
-	"Belarus" : "Λευκορωσία" ,
-	"Switzerland" : "Ελβετία" ,
-	"Czech Republic" : "Τσεχία" ,
-	"Czechia" : "Τσεχία" ,
-	"Czech Republic (Czechia)" : "Τσεχία" ,
-	"Germany" : "Γερμανία" ,
-	"Denmark" : "Δανία" ,
-	"Spain" : "Ισπανία" ,
-	"Estonia" : "Εσθονία" ,
-	"Finland" : "Φινλανδία" ,
-	"France" : "Γαλλία" ,
-	"Faroe Islands" : "Νήσοι Φερόε" ,
-	"Faeroe Islands" : "Νήσοι Φερόε" ,
-	"United Kingdom" : "Ην. Βασίλειο" ,
-	"United Kingdom of Great Britain and Northern Ireland" : "Ην. Βασίλειο" ,
-	"UK" : "Ην. Βασίλειο" ,
-	"Guernsey" : "Γκέρνσεϊ" ,
-	"Gibraltar" : "Γιβραλτάρ" ,
-	"Greece" : "Ελλάδα" ,
-	"Croatia" : "Κροατία" ,
-	"Hungary" : "Ουγγαρία" ,
-	"Isle of Man" : "Νήσος Μαν" ,
-	"Ireland" : "Ιρλανδία" ,
-	"Iceland" : "Ισλανδία" ,
-	"Italy" : "Ιταλία" ,
-	"Jersey" : "Τζέρσι" ,
-	"Kosovo" : "Κόσοβο" ,
-	"Liechtenstein" : "Λίχτενσταϊν" ,
-	"Lithuania" : "Λιθουανία" ,
-	"Luxembourg" : "Λουξεμβούργο" ,
-	"Latvia" : "Λεττονία" ,
-	"Monaco" : "Μονακό" ,
-	"Moldova" : "Μολδοβία" ,
-	"Moldova, Republic of" : "Μολδοβία" ,
-	"Macedonia" : "Βόρεια Μακεδονία" ,
-	"North Macedonia" : "Βόρεια Μακεδονία" ,
-	"Malta" : "Μάλτα" ,
-	"Montenegro" : "Μαυροβούνιο" ,
-	"Netherlands" : "Ολλανδία" ,
-	"Norway" : "Νορβηγία" ,
-	"Romania" : "Ρουμανία" ,
-	"Poland" : "Πολωνία" ,
-	"Portugal" : "Πορτογαλία" ,
-	"Russia" : "Ρωσία" ,
-	"Russian Federation" : "Ρωσία" ,
-	"San Marino" : "Άγ. Μαρίνος" ,
-	"Republic of Serbia" : "Σερβία" ,
-	"Serbia" : "Σερβία" ,
-	"Slovakia" : "Σλοβακία" ,
-	"Slovenia" : "Σλοβενία" ,
-	"Sweden" : "Σουηδία" ,
-	"Vatican" : "Βατικανό" ,
-	"Vatican City" : "Βατικανό" ,
-	"Holy See" : "Βατικανό" ,
-	"American Samoa" : "Αμερικανική Σαμόα" ,
-	"Ukraine" : "Ουκρανία" ,
-	"Ashmore and Cartier Islands" : "Νησιά Άσμορ & Κάρτιερ" ,
-	"Australia" : "Αυστραλία" ,
-	"Cook Islands" : "Νήσοι Κουκ" ,
-	"Coral Sea Islands" : "Ύφαλοι Θάλασσας Κοραλλίων" ,
-	"Fiji" : "Φίτζι" ,
-	"Federated States of Micronesia" : "Ομόσπονδες Πολιτείες Μικρονησίας" ,
-	"Micronesia" : "Ομόσπονδες Πολιτείες Μικρονησίας" ,
-	"Guam" : "Γκουάμ" ,
-	"Kiribati" : "Κιριμπάτι" ,
-	"Marshall Islands" : "Νήσοι Μάρσαλ" ,
-	"Northern Mariana Islands" : "Νήσοι Βόρειες Μαριάνες" ,
-	"New Caledonia" : "Νέα Καληδονία" ,
-	"Norfolk Island" : "Νήσος Νόρφολκ" ,
-	"Niue" : "Νιούε" ,
-	"Nauru" : "Ναουρού" ,
-	"New Zealand" : "Νέα Ζηλανδία" ,
-	"Pitcairn Islands" : "Πίτκαϊρν" ,
-	"Palau" : "Παλάου" ,
-	"Papua New Guinea" : "Παπούα Ν. Γουινέα" ,
-	"French Polynesia" : "Γαλλική Πολυνησία" ,
-	"Tonga" : "Τόγκα" ,
-	"Tuvalu" : "Τουβαλού" ,
-	"Vanuatu" : "Βανουάτου" ,
-	"Wallis and Futuna" : "Νήσοι Ουώλις & Φουτούνα" ,
-	"Wallis & Futuna" : "Νήσοι Ουώλις & Φουτούνα" ,
-	"Solomon Islands" : "Νήσοι Σολομώντα" ,
-	"Samoa" : "Σαμόα" ,
-	"Argentina" : "Αργεντινή" ,
-	"Bolivia" : "Βολιβία" ,
-	"Bolivia (Plurinational State of)" : "Βολιβία" ,
-	"Brazil" : "Βραζιλία" ,
-	"Chile" : "Χιλή" ,
-	"Colombia" : "Κολομβία" ,
-	"Ecuador" : "Ισημερινός" ,
-	"Falkland Islands" : "Νήσοι Φώκλαντ" ,
-	"Falkland Islands (Malvinas)" : "Νήσοι Φώκλαντ" ,
-	"Guyana" : "Γουιάνα" ,
-	"Peru" : "Περού" ,
-	"Paraguay" : "Παραγουάη" ,
-	"Suriname" : "Σουρινάμ" ,
-	"Uruguay" : "Ουρουγουάη" ,
-	"Venezuela" : "Βενεζουέλα" ,
-	"Venezuela (Bolivarian Republic of)" : "Βενεζουέλα" ,
-	"Aruba" : "Αρούμπα" ,
-	"Anguilla" : "Ανγκουίλα" ,
-	"Antigua and Barbuda" : "Αντίγκουα & Μπαρμπούντα" ,
-	"The Bahamas" : "Μπαχάμες" ,
-	"Bahamas" : "Μπαχάμες" ,
-	"Bajo Nuevo Bank (Petrel Is.)" : "Bajo Nuevo Bank (Petrel Is.)" ,
-	"Saint Barthelemy" : "Άγιος Βαρθολομαίος" ,
-	"Saint Barthélemy" : "Άγιος Βαρθολομαίος" ,
-	"St. Barth" : "Άγιος Βαρθολομαίος" ,
-	"Belize" : "Μπελίζ" ,
-	"Bermuda" : "Βερμούδες" ,
-	"Barbados" : "Μπαρμπάντος" ,
-	"Canada" : "Καναδάς" ,
-	"Costa Rica" : "Κόστα Ρίκα" ,
-	"Curaçao" : "Κουρασάο" ,
-	"Cayman Islands" : "Νησιά Κέιμαν" ,
-	"Dominica" : "Δομινίκα" ,
-	"Dominican Republic" : "Δομινικανή Δημ/τία" ,
-	"Grenada" : "Γρενάδα" ,
-	"Cuba" : "Κούβα" ,
-	"Greenland" : "Γροιλανδία" ,
-	"Guatemala" : "Γουατεμάλα" ,
-	"Honduras" : "Ονδούρα" ,
-	"Haiti" : "Αϊτή" ,
-	"Jamaica" : "Τζαμάικα" ,
-	"Saint Kitts and Nevis" : "Αγ. Χριστόφορος & Νέβις" ,
-	"Saint Kitts & Nevis" : "Αγ. Χριστόφορος & Νέβις" ,
-	"Saint Lucia" : "Άγ. Λουκία" ,
-	"Saint Martin" : "Άγιος Μαρτίνος" ,
-	"Mexico" : "Μεξικό" ,
-	"Montserrat" : "Μοντσερράτ" ,
-	"Nicaragua" : "Νικαράγουα" ,
-	"Puerto Rico" : "Πουέρτο Ρίκο" ,
-	"Serranilla Bank" : "Νήσος Σερανίγια" ,
-	"El Salvador" : "Ελ Σαλβαδόρ" ,
-	"Saint Pierre and Miquelon" : "Σεντ Πιέρ & Μικελόν" ,
-	"Saint Pierre & Miquelon" : "Σεντ Πιέρ & Μικελόν" ,
-	"Sint Maarten" : "Άγ. Μαρτίνος" ,
-	"Turks and Caicos Islands" : "Νήσοι Τουρκ & Κάικος" ,
-	"Turks and Caicos" : "Νήσοι Τουρκ & Κάικος" ,
-	"Panama" : "Παναμάς" ,
-	"Trinidad and Tobago" : "Τρινιντάντ & Τομπάγκο" ,
-	"United States Minor Outlying Islands" : "Απομακρυσμένες Νησίδες ΗΠΑ" ,
-	"United States of America" : "ΗΠΑ" ,
-	"USA" : "ΗΠΑ" ,
-	"US" : "ΗΠΑ" ,
-	"United States" : "ΗΠΑ" ,
-	"US Naval Base Guantanamo Bay" : "Αμερικανική Ναυτική Βάση Γκουαντάναμο" ,
-	"Saint Vincent and the Grenadines" : "Άγ. Βικέντιος & Γρεναδίνες" ,
-	"St. Vincent Grenadines" : "Άγ. Βικέντιος & Γρεναδίνες" ,
-	"St. Vincent & Grenadines" : "Άγ. Βικέντιος & Γρεναδίνες" ,
-	"British Virgin Islands" : "Βρετανικές Παρθένες Νήσοι" ,
-	"Virgin Islands (British)" : "Βρετανικές Παρθένες Νήσοι" ,
-	"United States Virgin Islands" : "Αμερικανικές Παρθένοι Νήσοι" ,
-	"U.S. Virgin Islands" : "Αμερικανικές Παρθένοι Νήσοι" ,
-	"Afghanistan" : "Αφγανιστάν" ,
-	"United Arab Emirates" : "Ην. Αραβικά Εμιράτα" ,
-	"UAE" : "Ην. Αραβικά Εμιράτα" ,
-	"Armenia" : "Αρμενία" ,
-	"Azerbaijan" : "Αζερμπαϊτζάν" ,
-	"Bangladesh" : "Μπανγκλαντές" ,
-	"Bahrain" : "Μπαχρέιν" ,
-	"Brunei" : "Μπρουνέι" ,
-	"Brunei Darussalam" : "Μπρουνέι" ,
-	"Bhutan" : "Μπουτάν" ,
-	"China" : "Κίνα" ,
-	"Cyprus No Mans Area" : "Πράσινη Γραμμή (Κύπρος)" ,
-	"Northern Cyprus" : "Κατεχόμενα Βόρεια Κύπρος" ,
-	"Cyprus" : "Κύπρος" ,
-	"Dhekelia Sovereign Base Area" : "Περιοχές Κυρίαρχων Βάσεων Ακρωτηρίου & Δεκέλιας" ,
-	"Georgia" : "Γεωργία" ,
-	"Hong Kong S.A.R." : "Χονγκ Κονγκ" ,
-	"Hong Kong" : "Χονγκ Κονγκ" ,
-	"Indonesia" : "Ινδονησία" ,
-	"India" : "Ινδία" ,
-	"Indian Ocean Territories" : "Περιοχή Ινδικού Ωκ/νού" ,
-	"Iran" : "Ιράν" ,
-	"Iran (Islamic Republic of)" : "Ιράν" ,
-	"Iraq" : "Ιράκ" ,
-	"Jordan" : "Ιορδανία" ,
-	"Japan" : "Ιαπωνία" ,
-	"Baykonur Cosmodrome" : "Κοσμοδρόμιο του Μπαϊκώνου" ,
-	"Siachen Glacier" : "Παγετώνας Σιάχεν" ,
-	"Israel" : "Ισραήλ" ,
-	"Kazakhstan" : "Καζακστάν" ,
-	"Kyrgyzstan" : "Κιργιζία" ,
-	"Cambodia" : "Καμπότζη" ,
-	"Kuwait" : "Κουβέιτ" ,
-	"Laos" : "Λάος" ,
-	"Lao People's Democratic Republic" : "Λάος" ,
-	"Lebanon" : "Λίβανος" ,
-	"Sri Lanka" : "Σρι Λάνκα" ,
-	"Macao S.A.R" : "Μακάου" ,
-	"Macao" : "Μακάου" ,
-	"Myanmar" : "Μιανμάρ" ,
-	"Mongolia" : "Μογγολία" ,
-	"Malaysia" : "Μαλαισία" ,
-	"Nepal" : "Νεπάλ" ,
-	"Oman" : "Ομάν" ,
-	"Pakistan" : "Πακιστάν" ,
-	"Spratly Islands" : "Νησιά Σπράτλυ" ,
-	"Philippines" : "Φιλιππίνες" ,
-	"Palestine" : "Παλεστίνη" ,
-	"Palestine, State of" : "Παλεστίνη" ,
-	"State of Palestine" : "Παλεστίνη" ,
-	"Qatar" : "Κατάρ" ,
-	"Saudi Arabia" : "Σαουδική Αραβία" ,
-	"Scarborough Reef" : "Ύφαλος Σκαρμπόροου" ,
-	"Singapore" : "Σιγκαπούρη" ,
-	"Syria" : "Συρία" ,
-	"Syrian Arab Republic" : "Συρία" ,
-	"Thailand" : "Ταϊλάνδη" ,
-	"Tajikistan" : "Τατζικιστάν" ,
-	"Turkmenistan" : "Τουρκμενιστάν" ,
-	"East Timor" : "Ανατολικό Τιμόρ" ,
-	"Timor-Leste" : "Ανατολικό Τιμόρ" ,
-	"Turkey" : "Τουρκία" ,
-	"Taiwan" : "Ταϊβάν" ,
-	"Taiwan*" : "Ταϊβάν" ,
-	"Uzbekistan" : "Ουζμπεκιστάν" ,
-	"Vietnam" : "Βιετνάμ" ,
-	"Viet Νam" : "Βιετνάμ" ,
-	"Akrotiri Sovereign Base Area" : "Περιοχή Κυρίαρχων Βάσεων Ακρωτηρίου" ,
-	"Yemen" : "Υεμένη" ,
-	"Angola" : "Ανγκόλα" ,
-	"Burundi" : "Μπουρούντι" ,
-	"Benin" : "Μπενίν" ,
-	"Burkina Faso" : "Μπουρκίνα Φάσο" ,
-	"Botswana" : "Μποτσουάνα" ,
-	"Central African Republic" : "Κεντροαφρικανική Δημ/τία" ,
-	"CAR" : "Κεντροαφρικανική Δημ/τία" ,
-	"Ivory Coast" : "Ακτή Ελεφαντοστού" ,
-	"Cote d'Ivoire" : "Ακτή Ελεφαντοστού" ,
-	"Côte d'Ivoire" : "Ακτή Ελεφαντοστού" ,
-	"Cameroon" : "Καμερούν" ,
-	"Democratic Republic of the Congo" : "Λαϊκή Δημ/τία Κονγκό" ,
-	"Congo, Democratic Republic of the" : "Λαϊκή Δημ/τία Κονγκό" ,
-	"DRC" : "Λαϊκή Δημ/τία Κονγκό" ,
-	"Congo (Kinshasa)" : "Λαϊκή Δημ/τία Κονγκό" ,
-	"DR Congo" : "Λαϊκή Δημ/τία Κονγκό" ,
-	"Republic of Congo" : "Δημ/τία Κονγκό" ,
-	"Congo" : "Δημ/τία Κονγκό" ,
-	"Comoros" : "Κομόρες" ,
-	"Cape Verde" : "Πράσινο Ακρωτήριο" ,
-	"Cabo Verde" : "Πράσινο Ακρωτήριο" ,
-	"Djibouti" : "Τζιμπουτί" ,
-	"Algeria" : "Αλγερία" ,
-	"Egypt" : "Αίγυπτος" ,
-	"Eritrea" : "Ερυθραία" ,
-	"Ethiopia" : "Αιθιοπία" ,
-	"Gabon" : "Γκαμπόν" ,
-	"Ghana" : "Γκάνα" ,
-	"Guinea" : "Γουινέα" ,
-	"Gambia" : "Γκάμπια" ,
-	"Guinea Bissau" : "Γουινέα-Μπισσάου" ,
-	"Guinea-Bissau" : "Γουινέα-Μπισσάου" ,
-	"Equatorial Guinea" : "Ισημερινή Γουινέα" ,
-	"Kenya" : "Κένυα" ,
-	"Liberia" : "Λιβερία" ,
-	"Libya" : "Λιβύη" ,
-	"Lesotho" : "Λεσότο" ,
-	"Morocco" : "Μαρόκο" ,
-	"Madagascar" : "Μαδαγασκάρη" ,
-	"Mali" : "Μάλι" ,
-	"Mozambique" : "Μοζαμβίκη" ,
-	"Mauritania" : "Μαυριτανία" ,
-	"Malawi" : "Μαλάουι" ,
-	"Namibia" : "Ναμίμπια" ,
-	"Niger" : "Νίγηρας" ,
-	"Nigeria" : "Νιγηρία" ,
-	"Rwanda" : "Ρουάντα" ,
-	"Western Sahara" : "Δυτική Σαχάρα" ,
-	"Sudan" : "Σουδάν" ,
-	"South Sudan" : "Νότιο Σουδάν" ,
-	"Senegal" : "Σενεγάλη" ,
-	"Sierra Leone" : "Σιέρα Λεόνε" ,
-	"Somaliland" : "Σομαλιλάνδη" ,
-	"Somalia" : "Σομαλία" ,
-	"Sao Tome and Principe" : "Σάο Τομέ & Πρίνσιπε" ,
-	"Sao Tome & Principe" : "Σάο Τομέ & Πρίνσιπε" ,
-	"Swaziland" : "Σουαζιλάνδη" ,
-	"Eswatini" : "Σουαζιλάνδη" ,
-	"Chad" : "Τσαντ" ,
-	"Togo" : "Τόγκο" ,
-	"Tunisia" : "Τυνησία" ,
-	"Tanzania, United Republic of" : "Τανζανία" ,
-	"United Republic of Tanzania" : "Τανζανία" ,
-	"Tanzania" : "Τανζανία" ,
-	"Uganda" : "Ουγκάντα" ,
-	"South Africa" : "Νότια Αφρική" ,
-	"Zambia" : "Ζάμπια" ,
-	"Seychelles" : "Σεϋχέλλες" ,
-	"Mayotte" : "Μαγιότ" ,
-	"Mauritius" : "Μαυρίκιος" ,
-	"Viet Nam" : "Βιετνάμ" ,
-	"Bonaire, Sint Eustatius and Saba" : "Καραϊβική Ολλανδία" ,
-	"Channel Islands" : "Αγγλονορμανδικές Νήσοι" ,
-	"Réunion" : "Ρεϋνιόν" ,
-	"Saint Martin (French part)" : "Άγιος Μαρτίνος (Γαλλία)" ,
-	"Guadeloupe" : "Γουαδελούπη" ,
-	"Sint Maarten (Dutch part)" : "Άγιος Μαρτίνος (Ολλανδία)" ,
-	"Zimbabwe" : "Ζιμπάμπουε"
+	"Active Cases": "Ενεργά Κρούσματα",
+	"No Location Provided": "Χωρίς Γεωγραφικό Προσδιορισμό",
+	"Imported (Detected at the entry points)": "Εισαγόμενα (Πύλες Εισόδου)",
+	"Imported (They asked to be tested)": "Εισαγόμενα (Αυτοβούλως)"
 }
